fixed form spacing and hover states

--- a/blocks/form.css
+++ b/blocks/form.css
@@ -11,7 +11,7 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
-  margin: 0 auto 0 0;
+  margin: 0 auto 8px 0;
 }
 
 .form__input {
@@ -49,6 +49,12 @@
   border-color: #838383;
   color: #FFFFFF;
   background-color: #2f80ed;
+  opacity: 100%;
+}
+
+.form__button:hover {
+  transition: ease-in-out .2s;
+  opacity: 70%;
 }
 
 .form__checkbox {
