--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -21,3 +21,8 @@
   color: #000000;
   text-decoration: none;
 }
+
+.nav__link:hover {
+
+}
+
